@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.9.16-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-09-16 15:32:43, took 00:13:32, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2025-09-16 17:24:10, took 00:12:02, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
